package tiles;

import gfx.Assets;

import java.awt.image.BufferedImage;

/**
 * Klasa opisująca blok trawy
 */
public class GrassTile extends Tile {
    public GrassTile(int id) {
        super(Assets.grass,id);
    }
}
