@startuml

title __TILES's Class Diagram__\n

  namespace  {
    namespace iles {
      class tiles.GrassTile {
          + GrassTile()
      }
    }
  }
  

  namespace  {
    namespace iles {
      class tiles.Tile {
          {static} + DEFAULT_TILEHEIGHT : int
          {static} + DEFAULT_TILEWIDTH : int
          {static} + grassTile : Tile
          {static} + tiles : Tile[]
          {static} + wallTile : Tile
          # id : int
          # texture : BufferedImage
          + Tile()
          + getId()
          {static} + getTiles()
          + isSolid()
          + render()
          {static} + setTiles()
          + update()
      }
    }
  }
  

  namespace  {
    namespace iles {
      class tiles.WallTile {
          + WallTile()
          + isSolid()
      }
    }
  }
  

  tiles.GrassTile -up-|> tiles.Tile
  tiles.WallTile -up-|> tiles.Tile


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
